parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> doc
Rule 1     doc -> constant_block rule_block
Rule 2     constant_block -> constant_block constant_definition
Rule 3     constant_block -> <empty>
Rule 4     rule_block -> rule_block rule
Rule 5     rule_block -> <empty>
Rule 6     constant_definition -> DOLLAR STRING EQUALS STRING
Rule 7     constant_name -> DOLLAR STRING
Rule 8     rule -> rule_declaration LCURL properties_block RCURL
Rule 9     rule_declaration -> rule_name new_rule selector new_selector
Rule 10    new_rule -> <empty>
Rule 11    new_selector -> <empty>
Rule 12    rule_name -> AT STRING
Rule 13    rule_name -> <empty>
Rule 14    selector -> STRING
Rule 15    selector -> STRING COLON STRING
Rule 16    selector -> <empty>
Rule 17    properties_block -> properties_block property
Rule 18    properties_block -> property
Rule 19    property -> STRING COLON STRING SEMICOLON
Rule 20    property -> STRING COLON constant_name SEMICOLON
Rule 21    property -> AT STRING

Terminals, with rules where they appear

AT                   : 12 21
COLON                : 15 19 20
COMMENT              : 
DOLLAR               : 6 7
EQUALS               : 6
LCURL                : 8
RCURL                : 8
SEMICOLON            : 19 20
STRING               : 6 6 7 12 14 15 15 19 19 20 21
error                : 

Nonterminals, with rules where they appear

constant_block       : 1 2
constant_definition  : 2
constant_name        : 20
doc                  : 0
new_rule             : 9
new_selector         : 9
properties_block     : 8 17
property             : 17 18
rule                 : 4
rule_block           : 1 4
rule_declaration     : 8
rule_name            : 9
selector             : 9

Parsing method: LALR

state 0

    (0) S' -> . doc
    (1) doc -> . constant_block rule_block
    (2) constant_block -> . constant_block constant_definition
    (3) constant_block -> .

    DOLLAR          reduce using rule 3 (constant_block -> .)
    AT              reduce using rule 3 (constant_block -> .)
    LCURL           reduce using rule 3 (constant_block -> .)
    STRING          reduce using rule 3 (constant_block -> .)
    $end            reduce using rule 3 (constant_block -> .)

    doc                            shift and go to state 1
    constant_block                 shift and go to state 2

state 1

    (0) S' -> doc .



state 2

    (1) doc -> constant_block . rule_block
    (2) constant_block -> constant_block . constant_definition
    (4) rule_block -> . rule_block rule
    (5) rule_block -> .
    (6) constant_definition -> . DOLLAR STRING EQUALS STRING

    AT              reduce using rule 5 (rule_block -> .)
    LCURL           reduce using rule 5 (rule_block -> .)
    STRING          reduce using rule 5 (rule_block -> .)
    $end            reduce using rule 5 (rule_block -> .)
    DOLLAR          shift and go to state 3

    rule_block                     shift and go to state 5
    constant_definition            shift and go to state 4

state 3

    (6) constant_definition -> DOLLAR . STRING EQUALS STRING

    STRING          shift and go to state 6


state 4

    (2) constant_block -> constant_block constant_definition .

    DOLLAR          reduce using rule 2 (constant_block -> constant_block constant_definition .)
    AT              reduce using rule 2 (constant_block -> constant_block constant_definition .)
    LCURL           reduce using rule 2 (constant_block -> constant_block constant_definition .)
    STRING          reduce using rule 2 (constant_block -> constant_block constant_definition .)
    $end            reduce using rule 2 (constant_block -> constant_block constant_definition .)


state 5

    (1) doc -> constant_block rule_block .
    (4) rule_block -> rule_block . rule
    (8) rule -> . rule_declaration LCURL properties_block RCURL
    (9) rule_declaration -> . rule_name new_rule selector new_selector
    (12) rule_name -> . AT STRING
    (13) rule_name -> .

    $end            reduce using rule 1 (doc -> constant_block rule_block .)
    AT              shift and go to state 9
    STRING          reduce using rule 13 (rule_name -> .)
    LCURL           reduce using rule 13 (rule_name -> .)

    rule_declaration               shift and go to state 7
    rule                           shift and go to state 8
    rule_name                      shift and go to state 10

state 6

    (6) constant_definition -> DOLLAR STRING . EQUALS STRING

    EQUALS          shift and go to state 11


state 7

    (8) rule -> rule_declaration . LCURL properties_block RCURL

    LCURL           shift and go to state 12


state 8

    (4) rule_block -> rule_block rule .

    AT              reduce using rule 4 (rule_block -> rule_block rule .)
    LCURL           reduce using rule 4 (rule_block -> rule_block rule .)
    STRING          reduce using rule 4 (rule_block -> rule_block rule .)
    $end            reduce using rule 4 (rule_block -> rule_block rule .)


state 9

    (12) rule_name -> AT . STRING

    STRING          shift and go to state 13


state 10

    (9) rule_declaration -> rule_name . new_rule selector new_selector
    (10) new_rule -> .

    STRING          reduce using rule 10 (new_rule -> .)
    LCURL           reduce using rule 10 (new_rule -> .)

    new_rule                       shift and go to state 14

state 11

    (6) constant_definition -> DOLLAR STRING EQUALS . STRING

    STRING          shift and go to state 15


state 12

    (8) rule -> rule_declaration LCURL . properties_block RCURL
    (17) properties_block -> . properties_block property
    (18) properties_block -> . property
    (19) property -> . STRING COLON STRING SEMICOLON
    (20) property -> . STRING COLON constant_name SEMICOLON
    (21) property -> . AT STRING

    STRING          shift and go to state 16
    AT              shift and go to state 18

    properties_block               shift and go to state 17
    property                       shift and go to state 19

state 13

    (12) rule_name -> AT STRING .

    STRING          reduce using rule 12 (rule_name -> AT STRING .)
    LCURL           reduce using rule 12 (rule_name -> AT STRING .)


state 14

    (9) rule_declaration -> rule_name new_rule . selector new_selector
    (14) selector -> . STRING
    (15) selector -> . STRING COLON STRING
    (16) selector -> .

    STRING          shift and go to state 20
    LCURL           reduce using rule 16 (selector -> .)

    selector                       shift and go to state 21

state 15

    (6) constant_definition -> DOLLAR STRING EQUALS STRING .

    DOLLAR          reduce using rule 6 (constant_definition -> DOLLAR STRING EQUALS STRING .)
    AT              reduce using rule 6 (constant_definition -> DOLLAR STRING EQUALS STRING .)
    LCURL           reduce using rule 6 (constant_definition -> DOLLAR STRING EQUALS STRING .)
    STRING          reduce using rule 6 (constant_definition -> DOLLAR STRING EQUALS STRING .)
    $end            reduce using rule 6 (constant_definition -> DOLLAR STRING EQUALS STRING .)


state 16

    (19) property -> STRING . COLON STRING SEMICOLON
    (20) property -> STRING . COLON constant_name SEMICOLON

    COLON           shift and go to state 22


state 17

    (8) rule -> rule_declaration LCURL properties_block . RCURL
    (17) properties_block -> properties_block . property
    (19) property -> . STRING COLON STRING SEMICOLON
    (20) property -> . STRING COLON constant_name SEMICOLON
    (21) property -> . AT STRING

    RCURL           shift and go to state 23
    STRING          shift and go to state 16
    AT              shift and go to state 18

    property                       shift and go to state 24

state 18

    (21) property -> AT . STRING

    STRING          shift and go to state 25


state 19

    (18) properties_block -> property .

    RCURL           reduce using rule 18 (properties_block -> property .)
    STRING          reduce using rule 18 (properties_block -> property .)
    AT              reduce using rule 18 (properties_block -> property .)


state 20

    (14) selector -> STRING .
    (15) selector -> STRING . COLON STRING

    LCURL           reduce using rule 14 (selector -> STRING .)
    COLON           shift and go to state 26


state 21

    (9) rule_declaration -> rule_name new_rule selector . new_selector
    (11) new_selector -> .

    LCURL           reduce using rule 11 (new_selector -> .)

    new_selector                   shift and go to state 27

state 22

    (19) property -> STRING COLON . STRING SEMICOLON
    (20) property -> STRING COLON . constant_name SEMICOLON
    (7) constant_name -> . DOLLAR STRING

    STRING          shift and go to state 30
    DOLLAR          shift and go to state 28

    constant_name                  shift and go to state 29

state 23

    (8) rule -> rule_declaration LCURL properties_block RCURL .

    AT              reduce using rule 8 (rule -> rule_declaration LCURL properties_block RCURL .)
    LCURL           reduce using rule 8 (rule -> rule_declaration LCURL properties_block RCURL .)
    STRING          reduce using rule 8 (rule -> rule_declaration LCURL properties_block RCURL .)
    $end            reduce using rule 8 (rule -> rule_declaration LCURL properties_block RCURL .)


state 24

    (17) properties_block -> properties_block property .

    RCURL           reduce using rule 17 (properties_block -> properties_block property .)
    STRING          reduce using rule 17 (properties_block -> properties_block property .)
    AT              reduce using rule 17 (properties_block -> properties_block property .)


state 25

    (21) property -> AT STRING .

    RCURL           reduce using rule 21 (property -> AT STRING .)
    STRING          reduce using rule 21 (property -> AT STRING .)
    AT              reduce using rule 21 (property -> AT STRING .)


state 26

    (15) selector -> STRING COLON . STRING

    STRING          shift and go to state 31


state 27

    (9) rule_declaration -> rule_name new_rule selector new_selector .

    LCURL           reduce using rule 9 (rule_declaration -> rule_name new_rule selector new_selector .)


state 28

    (7) constant_name -> DOLLAR . STRING

    STRING          shift and go to state 32


state 29

    (20) property -> STRING COLON constant_name . SEMICOLON

    SEMICOLON       shift and go to state 33


state 30

    (19) property -> STRING COLON STRING . SEMICOLON

    SEMICOLON       shift and go to state 34


state 31

    (15) selector -> STRING COLON STRING .

    LCURL           reduce using rule 15 (selector -> STRING COLON STRING .)


state 32

    (7) constant_name -> DOLLAR STRING .

    SEMICOLON       reduce using rule 7 (constant_name -> DOLLAR STRING .)


state 33

    (20) property -> STRING COLON constant_name SEMICOLON .

    RCURL           reduce using rule 20 (property -> STRING COLON constant_name SEMICOLON .)
    STRING          reduce using rule 20 (property -> STRING COLON constant_name SEMICOLON .)
    AT              reduce using rule 20 (property -> STRING COLON constant_name SEMICOLON .)


state 34

    (19) property -> STRING COLON STRING SEMICOLON .

    RCURL           reduce using rule 19 (property -> STRING COLON STRING SEMICOLON .)
    STRING          reduce using rule 19 (property -> STRING COLON STRING SEMICOLON .)
    AT              reduce using rule 19 (property -> STRING COLON STRING SEMICOLON .)

